# alpha-stack

./: CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  ETHOS.md  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt  setup-mcp.sh  setup-tui.sh  setup.sh  vercel.json
.github/workflows/: ci.yml
api/: index.py
docs/: workflow.md
examples/: attribution.md  board-deck.md  budget.md  buy-side.md  credit.md  forecast.md  fpa.md  investment-memo.md  ipo.md  lbo.md  long-short.md  macro.md  market-making.md  merger-arb.md  options-and-derivatives.md  pitch-deck.md  portfolio-construction.md  private-capital.md  quant-signals.md  real-estate.md  restructuring.md  risk-analytics.md  sell-side.md  trading-and-execution.md  venture-capital.md  wealth-advisory.md  wiki.md
examples/outputs/: lbo-software-buyout.md  long-short-semis.md  quarterly-attribution.md  retirement-monte-carlo.md  sell-side-chemicals.md
plugin/: setup-excel.sh
plugin/addin/: manifest.xml  taskpane.css  taskpane.html  taskpane.js
plugin/server/: app.py  chat.py  output_mapper.py  templates.py
public/: app.html  app.js  chat.html  chat.js  index.html  styles.css
scripts/: new-skill.sh  new-tool.sh
skills/accounting/: SKILL.md
skills/attribution/: SKILL.md
skills/audit/: SKILL.md
skills/buy-side/: SKILL.md
skills/capital-markets/: SKILL.md
skills/credit/: SKILL.md
skills/data-entry/: SKILL.md
skills/deal-execution/: SKILL.md
skills/earnings/: SKILL.md
skills/equity-research/: SKILL.md
skills/estate/: SKILL.md
skills/financial-statements/: SKILL.md
tests/: test_tools.py
tools/: black_litterman.py  black_scholes.py  bond_yield.py  brinson.py  cap_rate.py  convertible.py  credit_spread.py  dcf.py  depreciation.py  fetch.py  implied_vol.py  irr.py  kelly.py  lbo.py  loan_amort.py  market_maker.py  merger_arb.py  merton_model.py  monte_carlo.py  portfolio_risk.py  re_debt.py  re_development.py  re_noi.py  re_waterfall.py  state.py  vc_returns.py  wacc.py  wiki.py
tui/: __init__.py  __main__.py  app.py  bloomberg.tcss  config.py  data.py  ideas.py  registry.py  theme.py
(+104 files in other folders)
