[project]
name = "alpha-stack-mcp"
version = "1.0.0"
description = "Alpha Stack MCP Server — 23 finance tools for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
