[project]
name = "alpha-stack"
version = "1.0.0"
description = "Alpha Stack — Finance AI skill system. Web app (FastAPI), MCP server, TUI, Excel add-in."
requires-python = ">=3.10"
# Base deps = what the Vercel-deployed web app needs. Vercel reads this file
# and installs only these on the serverless function. Heavier surfaces
# (MCP, TUI, Excel server) opt in via the extras below.
dependencies = [
    "fastapi>=0.115.0",
    "anthropic>=0.69.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
tui = ["textual>=1.0.0", "yfinance>=0.2.0"]
excel = ["fastapi>=0.115.0", "uvicorn[standard]>=0.20.0"]

[tool.vercel]
entrypoint = "app:app"

# Without [build-system], Vercel may skip the Python build step for this
# project (it gets detected as static-only). Keep hatchling configured but
# minimal — it's enough to trigger Python detection.
[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
